--- a/Day-42/html_boilar.html
+++ b/Day-42/html_boilar.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing Title</title>
+    <title>MRIDUL</title>
 </head>
 <body>
-    <p>
-        <h3>Hello, I am HTML 5</h3>
-    </p><hr>
-    <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="This is a cat">
-    
-    
+<h3>MRIDUL KUMAR ROY</h3>
+<p>American International University - Bangladesh.
+    I am pasonate about Software Engineering.
+</p>
+<h5>Education</h5>
+<ul>
+    BSc in Computer Science and Technology
+    <p>2020-2023, CGPA - 3.67</p>
+</ul>
+
 </body>
 </html>
